# ucx

./: configure.ac
examples/: Makefile.am  hello_world_util.h  ucp_client_server.c  ucp_client_server_util.c  ucp_client_server_util.h  ucp_hello_world.c  ucp_shared_mkey.c  ucp_util.c  ucp_util.h
src/tools/info/: proto_info.c  ucx_info.c
src/tools/perf/: Makefile.am  perftest.c  perftest.h  perftest_params.c
src/ucp/: Makefile.am
src/ucp/am/: eager_multi.c
src/ucp/api/: ucp.h
src/ucp/core/: ucp_am.c  ucp_context.c  ucp_context.h  ucp_ep.c  ucp_ep.h  ucp_ep.inl  ucp_ep_vfs.c  ucp_mm.c  ucp_mm.h  ucp_mm.inl  ucp_proxy_ep.c  ucp_request.c  ucp_request.h  ucp_request.inl  ucp_rkey.c  ucp_rkey.h  ucp_worker.c
src/ucp/dt/: datatype_iter.c  datatype_iter.inl  dt.c  dt.h  dt.inl  dt_common.h  dt_generic.c  dt_struct.c  dt_struct.h
src/ucp/proto/: proto_am.c  proto_am.inl  proto_single.inl
src/ucp/rma/: flush.c  get_offload.c  put_offload.c  rma_basic.c  rma_send.c
src/ucp/rndv/: rndv.c  rndv_get.c  rndv_mtype.inl  rndv_put.c
src/ucp/stream/: stream_recv.c  stream_send.c
src/ucp/tag/: eager_multi.c  offload.c  rndv.c  tag_recv.c  tag_send.c
src/ucp/wireup/: select.c  wireup.c  wireup.h  wireup_cm.c  wireup_ep.c
src/ucs/config/: global_opts.c  global_opts.h
src/ucs/debug/: log.h
test/apps/: Makefile.am  test_uct_xgvmi.c
test/apps/ucx_allgather/: Makefile.am  ucx_allgather.c  ucx_allgather_client.c  ucx_allgather_client.h  ucx_allgather_common.c  ucx_allgather_common.h  ucx_allgather_daemon.c  ucx_allgather_daemon.h  ucx_core.c  ucx_core.h
(+59 files in other folders)
